# Solana-deployment-interaction

./: README.md  package-lock.json  package.json
src/client/: hello_world.js  main.js  main.ts  pricedb.js  std_basic.ts
src/client/util/: url.ts
src/client/util/store/: 1_config.json  2_config.json  __config.json  config.json
src/program-rust/: Cargo.toml
src/program-rust/src/: lib.rs
