
# Note: This crate must be built using do.sh

[package]
name = "solana-bpf-std-ref-basic"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
solana-sdk = { version = "=1.3.17", default-features = false, optional = true }
borsh = "0.7.1"

[lib]
name = "solana_bpf_std_ref_basic"
crate-type = ["cdylib", "lib"]
